修改货币体系

--- a/src/page/index.ejs
+++ b/src/page/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="千蚀vita抽卡模拟器">
+    <meta name="keywords" content="千蚀vita套麻袋模拟器">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="<%= require('../img/sourcestone.png')%>" />
     <script>
@@ -17,7 +17,7 @@
         })();
     </script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script> -->
-    <title>千蚀vita抽卡模拟</title>
+    <title>千蚀vita套麻袋模拟</title>
 </head>
 
 <body class="center">
@@ -25,7 +25,7 @@
     <!-- <audio id="bgm" src="https://music.163.com/song/media/outer/url?id=1371757760.mp3" autoplay loop="true" hidden="true">您的浏览器不支持audio标签</audio> -->
     <header>
         <div class="header">
-            <h1 class="headline">千蚀vita抽卡模拟器</h1>
+            <h1 class="headline">千蚀vita套麻袋模拟器</h1>
         </div>
     </header>
 
@@ -44,9 +44,9 @@
     <div class="radio-btn">
         <div class="select">
             <select id="selector">
-                <option value="0" id="opt0">抽卡1</option>
-                <option value="1" id="opt1">抽卡2</option>
-                <option value="2" id="opt2" style="display: none;">抽卡3</option>
+                <option value="0" id="opt0">套麻袋1</option>
+                <option value="1" id="opt1">套麻袋2</option>
+                <option value="2" id="opt2" style="display: none;">套麻袋3</option>
             </select>
         </div>
     </div>
@@ -55,7 +55,7 @@
         <p class="rate" id="rate">当前6星出率: 2%</p>
     </div>
     <div class="viewbox">
-        <button class="buy-btn" id="show-panel1">模拟源石交易所</button>
+        <button class="buy-btn" id="show-panel1">模拟星联币交易所</button>
         <button class="buy-btn" id="show-panel2">模拟组合包商店</button>
     </div>
     <div class="viewbox">
@@ -67,8 +67,8 @@
             <span class="btn-top-text-b">&times;6000</span>
         </div>
         <br>
-        <button class="do" id="DO">抽卡一次</button>
-        <button class="dt" id="DT">抽卡十次</button>
+        <button class="do" id="DO">套麻袋一次</button>
+        <button class="dt" id="DT">套麻袋十次</button>
     </div>
     <h1>结果</h1>
     <div class="result-box">
@@ -93,8 +93,8 @@
         <div class="package-buy">
             <h2 class="package-buy-head">组合包</h2>
             <button id="buy-package3">氪金30元月卡</button><br>
-            <button id="buy-package0">氪金168元每月抽卡</button><br>
-            <button id="buy-package1">氪金128元新人抽卡</button><br>
+            <button id="buy-package0">氪金168元每月麻袋</button><br>
+            <button id="buy-package1">氪金128元新人麻袋</button><br>
             <button id="buy-package2">氪金328元周年组合</button><br>
             <button id="buy-package4">氪金198元观光礼包</button>
         </div>
